BUG 3284: Thumbnail save button not visible on manage featured datasets * Move it to the top
QA: Buttons should be at the top right of the page, for both
    thumbnail and manage featured datasets->edit thumbnail

--- a/app/styles/screen-dataset-thumbnail.sass
+++ b/app/styles/screen-dataset-thumbnail.sass
@@ -127,15 +127,15 @@ $cropped_height: 80
         text-align: center
 
   .actionsForm
-    padding: 1em 0
+    float: right
 
     .saveStatus
       display: inline-block
-      margin-left: 1em
+      margin-right: 0
       .saving
         @include throbber-icon
         float: left
-        margin-right: 1em
+        padding-right: 1em
         display: none
         position: relative
         top: 1em
